--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
 	"version": "1.0.0",
 	"description": "Responsive personal portfolio",
 	"main": "index.js",
+	"homepage": "https://kyleodore.github.io/portfolio-responsive",
 	"scripts": {
-		"sass": "node-sass -w scss/ -o dist/css/ --recursive"
+		"sass": "node-sass -w scss/ -o dist/css/ --recursive",
+		"deploy": "gh-pages -d dist"
 	},
 	"author": "Kyle Tomlin O'Dore",
 	"license": "MIT",
 	"dependencies": {
+		"gh-pages": "^2.0.1",
 		"node-sass": "^4.12.0"
 	}
 }
