--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"version": "1.0.0",
 	"description": "Responsive personal portfolio",
 	"main": "index.js",
-	"homepage": "https://kyleodore.github.io/portfolio-responsive",
+	"homepage": "https://kyleodore.dev",
 	"scripts": {
 		"sass": "node-sass -w scss/ -o dist/css/ --recursive",
 		"deploy": "gh-pages -d dist"
